--- a/src/app/components/admin/select-punto-importante/select-punto-importante.component.html
+++ b/src/app/components/admin/select-punto-importante/select-punto-importante.component.html
@@ -1,13 +1,21 @@
 <nz-select nzShowSearch nzAllowClear [nzDropdownRender]="renderTemplate" nzSize='large' nzMode="multiple"
     nzPlaceHolder="Punto Importante" nzSize='large' (ngModelChange)="onSelectPuntoImportante($event)"
     [(ngModel)]="listOfSelectedPuntos">
-    <nz-option *ngFor="let item of arrPuntosImportantes" [nzLabel]="item.name" [nzValue]="item"></nz-option>
+    <nz-option *ngFor="let item of arrPuntosImportantes" nzCustomContent [nzLabel]="item.name" [nzValue]="item">
+        <div class="box">
+            {{item.name}}
+            <a nz-popconfirm nzPopconfirmTitle="¿Estas seguro que deseas borrar el deporte?" nzPopconfirmPlacement="bottom"
+                (nzOnConfirm)="confirmDelete()" (nzOnCancel)="cancelDelete()">
+                <span class='delete' nz-icon nzType="delete" nzTheme="outline"></span>
+            </a>
+        </div>
+    </nz-option>
 </nz-select>
 <ng-template #renderTemplate>
     <form class='form-list' (ngSubmit)="handleAddPuntoImportante()" [formGroup]="formPuntoImportante">
             <input class="form-control form-control-add-list" type="text" formControlName="name" nz-input #inputElement
                 placeholder="Añadir nuevo punto importante" />
             <a type='submit' class="add-item" (click)="handleAddPuntoImportante()">
-                <span nz-icon nzType="plus"></span> </a>
+                <span nz-icon nzType="plus"> </span>Agregar </a>
     </form>
 </ng-template>
