--- a/src/app/components/user/header/header.component.html
+++ b/src/app/components/user/header/header.component.html
@@ -53,7 +53,7 @@
         <li
           nz-menu-item
           nzMatchRouterExact
-          routerLink="/torneos"
+          routerLink="./mis-reservaciones"
           (click)="close()"
         >
           <span nz-icon nzType="calendar"></span>
