--- a/src/app/pages/user/reservar-deporte/reservar-deporte.component.css
+++ b/src/app/pages/user/reservar-deporte/reservar-deporte.component.css
@@ -13,15 +13,6 @@ img{
     color: rgba(0, 0, 0, 0.45);
 }
 
-/* 
-:host ::ng-deep .ant-tabs-nav {
-    display: flex !important;
+h4{
+    margin-bottom: 0;
 }
-
-:host ::ng-deep .ant-tabs-nav .ant-tabs-tab {
-    flex-grow: 1 !important;
-    margin-right: 0px !important;
-    width: 100% !important;
-    text-align: center !important;
-} 
-*/
