--- a/src/app/pages/user/reservar-menu/reservar-menu.component.html
+++ b/src/app/pages/user/reservar-menu/reservar-menu.component.html
@@ -1,5 +1,5 @@
 
-<div class="container mt-3">
+<div class="mt-3">
     <nz-input-group [nzSuffix]="suffixIconSearch" class="rounded-3 text-center p-2">
         <input type="text" nz-input placeholder="¿Buscas algo?" />
     </nz-input-group>
