cancel my reservations and validations

--- a/src/app/components/user/home/reservaciones/reservaciones.component.html
+++ b/src/app/components/user/home/reservaciones/reservaciones.component.html
@@ -1,12 +1,12 @@
-<div nzMatchRouter routerLink="./mis-reservaciones" class="row my-2 mis-reservas rounded-3 py-4">
+<div class="row my-2 mis-reservas rounded-3 py-4">
     <div class="col-4 fecha text-center">
-        <h1>{{formatoFecha(displayReservaciones.reservacion.date)}}</h1>
+        <h1>{{fecha}}</h1>
     </div>
     <div class="col-8 p-0">
                 <div class="rounded-3 text-left">
                     <div class="px-4 border-start border-black">
                         <div class="titulo-reserva">
-                            <h4 class="">{{espacioHijo.name}}</h4>                            
+                            <h4 class="">{{nombre_espacio}}</h4>                            
                         </div>
                         
                         <div class="horario-reserva">
