--- a/src/app/components/user/mis-reservaciones/reservacion-card/reservacion-card.component.html
+++ b/src/app/components/user/mis-reservaciones/reservacion-card/reservacion-card.component.html
@@ -1,4 +1,4 @@
-<div class="row mis-reservas rounded-3 py-4">
+<div class="row mis-reservas rounded-3 py-3">
     <div class="col-4 w-100 d-flex justify-content-end">
         <span 
             nz-icon nzType="delete" nzTheme="outline"
@@ -18,7 +18,7 @@
         <div class="rounded-3 text-left">
             <div class="px-4 border-start border-black">
                 <div class="titulo-reserva">
-                    <h4 class="">{{nombre_espacio_padre}}</h4>
+                    <h4 class="">{{nombre_espacio}}</h4>
                 </div>
 
                 <div class="horario-reserva">
