--- a/src/app/pages/user/home/home.component.html
+++ b/src/app/pages/user/home/home.component.html
@@ -11,7 +11,7 @@
             </div>
         </div>
     </div>
-    <app-reservaciones></app-reservaciones>
+    <app-reservaciones nzMatchRouter routerLink="./mis-reservaciones"></app-reservaciones>
     <app-anuncios></app-anuncios>
 </div>
 
