--- a/src/app/components/user/home/reservaciones/reservaciones.component.css
+++ b/src/app/components/user/home/reservaciones/reservaciones.component.css
@@ -1,8 +1,7 @@
 .mis-reservas{
-    width: 100%;
     background-color:#fff;
     text-align: left;
-    /* border: 1px solid #f0f0f0; */
+    border: 1px solid rgb(218, 218, 218);
 }
 
 .fecha{
