--- a/src/app/components/user/home/anuncios/anuncios.component.css
+++ b/src/app/components/user/home/anuncios/anuncios.component.css
@@ -8,3 +8,12 @@
     height: 180px;
     object-fit:cover;
 }
+
+.fondo{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5));
+    position:absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
