--- a/src/app/pages/admin/panelAdmin/panelAdmin.component.html
+++ b/src/app/pages/admin/panelAdmin/panelAdmin.component.html
@@ -95,12 +95,13 @@
 
 
             
-                <div class="row customRow chartAndTables">
-                    <div class="col-md-8 cardContainer">
+                <div class="row customColumn" style="margin-left: 20px;">
+
+                    <div class="sectionOne cardContainer" >
                         <app-admin-charts></app-admin-charts>            
                     </div>
                     
-                    <div class="col-md-4 cardContainer">
+                    <div class="sectionTwo cardContainer">
                        <h3>Reservaciones recientes </h3>
                        <div class="container">
                         <div class="row tableContainer"> 
