--- a/src/app/components/user/reservar/tab-reservar/calendar/calendar.component.html
+++ b/src/app/components/user/reservar/tab-reservar/calendar/calendar.component.html
@@ -1,7 +1,7 @@
 <div class="parent-container">	
 	<div
 		class="container"
-		[ngStyle]="{ border: '1px solid #d9d9d9', borderRadius: '4px' }"
+		[ngStyle]="{ border: '1px solid #d9d9d9', borderRadius: '0.5rem' , margin: '15px 0 0 0'}"
 	>
 		<nz-calendar
 			[nzMode]="mode"
