--- a/src/app/components/user/reservar/torneo-card/torneo-card.component.html
+++ b/src/app/components/user/reservar/torneo-card/torneo-card.component.html
@@ -7,8 +7,8 @@
 			/>
 		</div>
 		<div class="card-description">
-			<span class="torneo-type">{{ torneo.name }}</span>
-			<h5 class="torneo-title">{{ torneo.description }}</h5>
+			<span class="torneo-type">{{ torneo.evento }}</span>
+			<h5 class="torneo-title">{{ torneo.name }}</h5>
 		</div>
 	</div>
 </a>
