--- a/src/app/components/admin/header-espacio/header-espacio.component.html
+++ b/src/app/components/admin/header-espacio/header-espacio.component.html
@@ -1,5 +1,5 @@
 
-<app-modal-edit-espacio [isVisible]='openEditModal'></app-modal-edit-espacio >
+<app-modal-edit-espacio [isVisible]='openEditModal' (cancel)="handleCancel($event)"></app-modal-edit-espacio >
 
 <div class="container">
     <div class="card">
