--- a/src/app/components/admin/tabEspacios/tabEspacios.component.html
+++ b/src/app/components/admin/tabEspacios/tabEspacios.component.html
@@ -7,6 +7,10 @@
         [open_at]="espacio.open_at"
         [close_at]="espacio.close_at"
         [imagen]="espacio.imagen"
+        [espacio_padre_id]="espacio.espacio_padre_id"
+        [time_max]="espacio.time_max"
+        [capacity]="espacio.capacity"
+        [details]="espacio.details"
         >
         </app-cardEspacio>
     </div>
