--- a/src/app/components/admin/cardEspacio/cardEspacio.component.html
+++ b/src/app/components/admin/cardEspacio/cardEspacio.component.html
@@ -1,4 +1,7 @@
-<div class="container" routerLink="./{{espacio_id}}/espacio-details" [state]="{ espacio_id:espacio_id , name: name, created_at : created_at,
+<div class="container" routerLink="./{{espacio_id}}/espacio-details" [state]="
+{ espacio_id:espacio_id , 
+name: name, 
+created_at : created_at,
 updated_at : updated_at,
 code : code,
 capacity : capacity,
