--- a/src/app/components/admin/modal-edit-espacio/modal-edit-espacio.component.html
+++ b/src/app/components/admin/modal-edit-espacio/modal-edit-espacio.component.html
@@ -1,4 +1,4 @@
-<nz-modal [(nzVisible)]="isVisible" (nzOnCancel)="handleCancel()" (nzOnOk)="handleEdit()">
+<nz-modal [(nzVisible)]="isVisible" (nzOnCancel)="handleCancel()" (nzOnOk)="handleEdit()" nzCancelDanger="true" nzOkType='primary' nzCancelType='primary' nzCancelText="Borrar" nzOkText="Crear">
     <ng-container *nzModalContent>
         <p class="text" style="font-size: 2rem;top: 1%;font-weight: bold;">Editar Espacio</p>
         <form (ngSubmit)="handleEdit()" [formGroup]="formEspacio">
@@ -10,15 +10,15 @@
                     <input formControlName="code" type="text" class="form-control" placeholder="Codigo" />
                 </div>
                 <div class="col col-sm-12">
-                    <app-select-deporte></app-select-deporte>
+                    <app-select-deporte (listOfSelectedDeportes)="addList($event, 'deporte')"></app-select-deporte>
                 </div>
 
                 <div class="col col-sm-12">
-                    <app-select-espacio-padre></app-select-espacio-padre>
+                    <app-select-espacio-padre (espacio_padre_id)="addList($event, 'espacio-padre')"></app-select-espacio-padre>
                 </div>
 
                 <div class="col col-sm-12">
-                    <app-select-punto-importante></app-select-punto-importante>
+                    <app-select-punto-importante (listOfSelectedPuntos)="addList($event, 'punto')"></app-select-punto-importante>
                 </div>
 
                 <div class="col col-sm-9">
@@ -27,7 +27,6 @@
                 </div>
                 <div class="col col-sm-3">
                     <app-file-upload (newItemEvent)="addFileEspacio($event)" size="big"></app-file-upload>
-                    <!-- <app-file-upload ></app-file-upload> -->
 
                 </div>
                 <div class="col col-sm-6">
@@ -61,4 +60,10 @@
             </div>
         </form>
     </ng-container>
+    <ng-template [nzModalFooter]>
+        <app-modal-delete size="small" [id_object]="espacio_id" type_object="espacio"
+        name_object={{name}}></app-modal-delete>
+        <button nz-button nzType="default" (click)="handleCancel()">Cancelar</button>
+        <button nz-button nzType="primary" (click)="handleEdit()" >Editar</button>
+      </ng-template>
 </nz-modal>
