--- a/src/app/pages/admin/torneos/torneos.component.html
+++ b/src/app/pages/admin/torneos/torneos.component.html
@@ -1,62 +1,34 @@
 <div class="container">
-    <nz-modal [(nzVisible)]="isVisible" (nzOnCancel)="handleCancel()" (nzOnOk)="handleAddTorneo()">
+    <nz-modal [(nzVisible)]="isVisible" (nzOnCancel)="handleCancel()" (nzOnOk)="handleAddTorneo()" nzCancelText="Cancelar" nzOkText="Crear">
         <ng-container *nzModalContent>
             <p class="text" style="font-size: 2rem;top: 1%;font-weight: bold;">Agregar Torneo</p>
             <form (ngSubmit)="handleAddTorneo()" [formGroup]="formTorneo">
                 <div class="row">
-                    <div class="col col-sm-9">
+                    <div class="col col-sm-12">
                         <input formControlName="name" type="text" class="form-control" aria-describedby="helpId"
                             placeholder="Nombre" />
                     </div>
-                    <div class="col col-sm-3">
+                    <div class="col col-sm-12">
                         <input formControlName="evento" type="text" class="form-control" aria-describedby="helpId"
-                            placeholder="Evento" />
-                    </div>
-                    <div class="col col-sm-6">
-                        <input formControlName="location" type="text" class="form-control" aria-describedby="helpId"
-                            placeholder="Location" />
-                    </div>
-                    <div class="col col-sm-6">
-                        
-                            <textarea formControlName="description" type="text" class="form-control"
-                            aria-describedby="helpId" placeholder="Description" rows="5"></textarea>
+                            placeholder="Tipo de evento (Intramuros, Conadeip, etc.)" />
                     </div>
                     <div class="col col-sm-12">
-                        <nz-select formControlName="deporte_id" nzShowSearch nzAllowClear
-                            [nzDropdownRender]="renderTemplateDeportes" nzPlaceHolder="Deporte" nzSize='large'
-                            (ngModelChange)="onSelectDeporte($event)" nzMode="multiple"
-                            [(ngModel)]="listOfSelectedDeportes">
-                            <nz-option *ngFor="let item of arrDeportes" [nzLabel]="item.name"
-                                [nzValue]="item.deporte_id"></nz-option>
-                        </nz-select>
-                        <ng-template #renderTemplateDeportes>
-                            <div class="container container-select">
-                                <form class='form-list' (ngSubmit)="handleAddDeporte()" [formGroup]="formDeporte">
-                                    <input class="form-control" formControlName="name" type="text" nz-input
-                                        #inputElement placeholder="Añadir nuevo deporte" />
-                                    <app-file-upload (newItemEvent)="addFileDeporte($event)"
-                                        type="small"></app-file-upload>
-                                    <a type='submit' class="add-item" (click)="handleAddDeporte()">
-                                        <span nz-icon nzType="plus"></span> </a>
-                                </form>
-                            </div>
-                        </ng-template>
+                        <input formControlName="url" type="text" class="form-control" aria-describedby="helpId"
+                            placeholder="URL Formulario de registro" />
                     </div>
                     <div class="col col-sm-9">
-                        <input formControlName="url" type="text" class="form-control" aria-describedby="helpId"
-                            placeholder="Link" />
+                            <textarea formControlName="description" type="text" class="form-control"
+                            aria-describedby="helpId" placeholder="Descripción" rows="3"></textarea>
                     </div>
                     <div class="col col-sm-3">
-                        <app-file-upload></app-file-upload>
-                        <!-- <app-file-upload (newItemEvent)="addFileTorneo($event)"></app-file-upload> -->
+                        <app-file-upload (newItemEvent)="addFileTorneo($event)" size="big"></app-file-upload>
                     </div>
                     <div class="col col-sm-12">
-                        <nz-select formControlName="espacio_padre_id" nzShowSearch nzAllowClear
-                            nzPlaceHolder="Espacio Padre" nzSize='large' (ngModelChange)="onSelectEspacio($event)">
-                            <nz-option *ngFor="let item of arrEspacioPadre" [nzLabel]="item.name"
-                                [nzValue]="item.espacio_padre_id"></nz-option>
-                        </nz-select>
+                        <app-select-deporte (listOfSelectedDeportes)="addList($event, 'deporte')" multiple='default'></app-select-deporte>
                     </div>
+                    <div class="col col-sm-12">
+                        <app-select-espacio-padre
+                        (espacio_padre_id)="addList($event, 'espacio-padre')"></app-select-espacio-padre>                    </div>
                     <div class="col col-sm-12">
                         <nz-range-picker [nzRanges]="ranges" nzShowTime nzFormat="yyyy/MM/dd HH:mm:ss" ngModel
                             nzSize="large" (ngModelChange)="onChange($event)" formControlName="dates"></nz-range-picker>
@@ -69,7 +41,7 @@
     </nz-modal>
     <div class="row">
         <div class="col-sm-6">
-            <p class="text" style="font-size: 2rem;top: 1%;font-weight: bold;">Torneos y actividades</p>
+            <p class="text" style="font-size: 2rem;top: 1%;font-weight: bold; margin-bottom: 10%;">Torneos y actividades</p>
         </div>
         <div class="col-sm-6">
             <div class="row">
